[gd_scene load_steps=42 format=2]

[ext_resource path="res://scenes/levels/Door.tscn" type="PackedScene" id=1]
[ext_resource path="res://default_theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/skeleton/Skeleton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/levels/background.png" type="Texture" id=4]
[ext_resource path="res://scenes/levels/floor_tiles.png" type="Texture" id=5]
[ext_resource path="res://scenes/settings_menu/Settings.gd" type="Script" id=6]
[ext_resource path="res://scenes/levels/Torch.tscn" type="PackedScene" id=7]

[sub_resource type="OccluderPolygon2D" id=19]
polygon = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="OccluderPolygon2D" id=20]
polygon = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="OccluderPolygon2D" id=21]
polygon = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="OccluderPolygon2D" id=22]
polygon = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="OccluderPolygon2D" id=23]
polygon = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="OccluderPolygon2D" id=24]
polygon = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="OccluderPolygon2D" id=25]
polygon = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="OccluderPolygon2D" id=26]
polygon = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="OccluderPolygon2D" id=27]
polygon = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="OccluderPolygon2D" id=28]
polygon = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="OccluderPolygon2D" id=29]
polygon = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="OccluderPolygon2D" id=30]
polygon = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="OccluderPolygon2D" id=31]
polygon = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="OccluderPolygon2D" id=32]
polygon = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="OccluderPolygon2D" id=33]
polygon = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="OccluderPolygon2D" id=34]
polygon = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=9]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=11]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=13]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=14]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=15]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=16]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=17]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="ConvexPolygonShape2D" id=18]
points = PoolVector2Array( 0, 0, 128, 0, 128, 128, 0, 128 )

[sub_resource type="TileSet" id=35]
0/name = "floor_tiles.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 512, 512 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 144, Vector2( 0, 1 ), 146, Vector2( 0, 2 ), 18, Vector2( 0, 3 ), 16, Vector2( 1, 0 ), 16777392, Vector2( 1, 1 ), 17039538, Vector2( 1, 2 ), 262194, Vector2( 1, 3 ), 48, Vector2( 2, 0 ), 20971704, Vector2( 2, 1 ), 21299386, Vector2( 2, 2 ), 327738, Vector2( 2, 3 ), 56, Vector2( 3, 0 ), 4194456, Vector2( 3, 1 ), 4259994, Vector2( 3, 2 ), 65562, Vector2( 3, 3 ), 24 ]
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 128, 128 )
0/autotile/spacing = 0
0/autotile/occluder_map = [ Vector2( 0, 0 ), SubResource( 19 ), Vector2( 0, 1 ), SubResource( 20 ), Vector2( 0, 2 ), SubResource( 21 ), Vector2( 0, 3 ), SubResource( 22 ), Vector2( 1, 0 ), SubResource( 23 ), Vector2( 1, 1 ), SubResource( 24 ), Vector2( 1, 2 ), SubResource( 25 ), Vector2( 1, 3 ), SubResource( 26 ), Vector2( 2, 0 ), SubResource( 27 ), Vector2( 2, 1 ), SubResource( 28 ), Vector2( 2, 2 ), SubResource( 29 ), Vector2( 2, 3 ), SubResource( 30 ), Vector2( 3, 0 ), SubResource( 31 ), Vector2( 3, 1 ), SubResource( 32 ), Vector2( 3, 2 ), SubResource( 33 ), Vector2( 3, 3 ), SubResource( 34 ) ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 1 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 9 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 11 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 2 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 13 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 14 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 3, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 15 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 1, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 16 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 2, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 17 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
}, {
"autotile_coord": Vector2( 0, 3 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 18 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[node name="Settings" type="Node2D"]
script = ExtResource( 6 )

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="TitleScreen" type="Label" parent="."]
margin_left = 1665.0
margin_top = 746.0
margin_right = 1879.0
margin_bottom = 795.0
theme = ExtResource( 2 )
text = "Titlescreen"

[node name="TitleScreenDoor" parent="." instance=ExtResource( 1 )]
position = Vector2( 1859, 774 )
destination_room = "res://scenes/title/TitleScreen.tscn"

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 35 )
cell_size = Vector2( 128, 128 )
cell_custom_transform = Transform2D( 128, 0, 0, 128, 0, 0 )
collision_layer = 2
collision_mask = 0
format = 1
tile_data = PoolIntArray( -1, 0, 1, -65536, 0, 2, -65535, 0, 2, -65534, 0, 2, -65533, 0, 2, -65532, 0, 2, -65531, 0, 2, -65530, 0, 2, -65529, 0, 2, -65528, 0, 2, -65527, 0, 2, -65526, 0, 2, -65525, 0, 2, -65524, 0, 2, -65523, 0, 2, -65522, 0, 2, -65521, 0, 3, 65535, 0, 65537, 0, 0, 65538, 1, 0, 65538, 2, 0, 65538, 3, 0, 65538, 4, 0, 65538, 5, 0, 65538, 6, 0, 65538, 7, 0, 65538, 8, 0, 65538, 9, 0, 65538, 10, 0, 65538, 11, 0, 65538, 12, 0, 65538, 13, 0, 65538, 14, 0, 65538, 15, 0, 65539, 131071, 0, 65537, 65536, 0, 65538, 65537, 0, 65538, 65538, 0, 65538, 65539, 0, 65538, 65540, 0, 65538, 65541, 0, 65538, 65542, 0, 65538, 65543, 0, 65538, 65544, 0, 65538, 65545, 0, 65538, 65546, 0, 65538, 65547, 0, 65538, 65548, 0, 65538, 65549, 0, 65538, 65550, 0, 65538, 65551, 0, 65539, 196607, 0, 65537, 131072, 0, 65538, 131073, 0, 65538, 131074, 0, 65538, 131075, 0, 65538, 131076, 0, 65538, 131077, 0, 65538, 131078, 0, 65538, 131079, 0, 65538, 131080, 0, 65538, 131081, 0, 65538, 131082, 0, 65538, 131083, 0, 65538, 131084, 0, 65538, 131085, 0, 65538, 131086, 0, 65538, 131087, 0, 65539, 262143, 0, 65537, 196608, 0, 65538, 196609, 0, 65538, 196610, 0, 65538, 196611, 0, 65538, 196612, 0, 65538, 196613, 0, 65538, 196614, 0, 65538, 196615, 0, 65538, 196616, 0, 65538, 196617, 0, 65538, 196618, 0, 65538, 196619, 0, 65538, 196620, 0, 65538, 196621, 0, 65538, 196622, 0, 65538, 196623, 0, 65539, 327679, 0, 65537, 262144, 0, 65538, 262145, 0, 131074, 262146, 0, 131074, 262147, 0, 131074, 262148, 0, 131074, 262149, 0, 131074, 262150, 0, 131074, 262151, 0, 131074, 262152, 0, 131074, 262153, 0, 131074, 262154, 0, 131074, 262155, 0, 131074, 262156, 0, 131074, 262157, 0, 131074, 262158, 0, 131074, 262159, 0, 131075, 393215, 0, 65537, 327680, 0, 65539, 458751, 0, 65537, 393216, 0, 65539, 524287, 0, 65537, 458752, 0, 65538, 458753, 0, 2, 458754, 0, 2, 458755, 0, 2, 458756, 0, 2, 458757, 0, 2, 458758, 0, 2, 458759, 0, 2, 458760, 0, 2, 458761, 0, 2, 458762, 0, 2, 458763, 0, 2, 458764, 0, 2, 458765, 0, 2, 458766, 0, 2, 458767, 0, 3, 589823, 0, 65537, 524288, 0, 65538, 524289, 0, 65538, 524290, 0, 65538, 524291, 0, 65538, 524292, 0, 65538, 524293, 0, 65538, 524294, 0, 65538, 524295, 0, 65538, 524296, 0, 65538, 524297, 0, 65538, 524298, 0, 65538, 524299, 0, 65538, 524300, 0, 65538, 524301, 0, 65538, 524302, 0, 65538, 524303, 0, 65539, 655359, 0, 131073, 589824, 0, 131074, 589825, 0, 131074, 589826, 0, 131074, 589827, 0, 131074, 589828, 0, 131074, 589829, 0, 131074, 589830, 0, 131074, 589831, 0, 131074, 589832, 0, 131074, 589833, 0, 131074, 589834, 0, 131074, 589835, 0, 131074, 589836, 0, 131074, 589837, 0, 131074, 589838, 0, 131074, 589839, 0, 131075 )

[node name="Skeleton" parent="." instance=ExtResource( 3 )]
position = Vector2( 1407, 895 )

[node name="Torch" parent="." instance=ExtResource( 7 )]
position = Vector2( 429, 776 )

[node name="Torch2" parent="." instance=ExtResource( 7 )]
position = Vector2( 1475, 778 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
margin_right = 536.0
margin_bottom = 489.0
theme = ExtResource( 2 )

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_right = 536.0
margin_bottom = 65.0
text = "Volume"
align = 1

[node name="MainVolume" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 69.0
margin_right = 536.0
margin_bottom = 134.0
hint_tooltip = "The overall volume of the game."

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/MainVolume"]
margin_right = 226.0
margin_bottom = 65.0
size_flags_horizontal = 3
text = "Main"

[node name="Main" type="HSlider" parent="CanvasLayer/VBoxContainer/MainVolume"]
margin_left = 286.0
margin_top = 24.0
margin_right = 536.0
margin_bottom = 40.0
rect_min_size = Vector2( 250, 0 )
size_flags_vertical = 4
max_value = 1.0
step = 0.05

[node name="SoundVolume" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 138.0
margin_right = 536.0
margin_bottom = 203.0
hint_tooltip = "The volume of sound effects."

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/SoundVolume"]
margin_right = 226.0
margin_bottom = 65.0
size_flags_horizontal = 3
text = "Sound"

[node name="Sound" type="HSlider" parent="CanvasLayer/VBoxContainer/SoundVolume"]
margin_left = 286.0
margin_top = 24.0
margin_right = 536.0
margin_bottom = 40.0
rect_min_size = Vector2( 250, 0 )
size_flags_vertical = 4
max_value = 1.0
step = 0.05

[node name="MusicVolume" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 207.0
margin_right = 536.0
margin_bottom = 272.0
hint_tooltip = "The volume of the music."

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/MusicVolume"]
margin_right = 226.0
margin_bottom = 65.0
size_flags_horizontal = 3
text = "Music"

[node name="Music" type="HSlider" parent="CanvasLayer/VBoxContainer/MusicVolume"]
margin_left = 286.0
margin_top = 24.0
margin_right = 536.0
margin_bottom = 40.0
rect_min_size = Vector2( 250, 0 )
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 0.5

[node name="Display" type="Label" parent="CanvasLayer/VBoxContainer"]
margin_top = 276.0
margin_right = 536.0
margin_bottom = 341.0
text = "Display"
align = 1

[node name="FontSize" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 345.0
margin_right = 536.0
margin_bottom = 414.0
hint_tooltip = "Maximum number of rigid bones (lower for more performance)."

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/FontSize"]
margin_top = 2.0
margin_right = 226.0
margin_bottom = 67.0
size_flags_horizontal = 3
text = "Font size"

[node name="FontSize" type="SpinBox" parent="CanvasLayer/VBoxContainer/FontSize"]
margin_left = 286.0
margin_right = 536.0
margin_bottom = 69.0
rect_min_size = Vector2( 250, 0 )
size_flags_vertical = 4
min_value = 32.0
max_value = 80.0
value = 32.0
rounded = true
allow_greater = true

[node name="Font" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 418.0
margin_right = 536.0
margin_bottom = 489.0
hint_tooltip = "Maximum number of rigid bones (lower for more performance)."

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/Font"]
margin_top = 3.0
margin_right = 226.0
margin_bottom = 68.0
size_flags_horizontal = 3
text = "Font"

[node name="Font" type="OptionButton" parent="CanvasLayer/VBoxContainer/Font"]
margin_left = 286.0
margin_right = 536.0
margin_bottom = 71.0
rect_min_size = Vector2( 250, 0 )
size_flags_vertical = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -324.0
margin_bottom = 42.0
grow_horizontal = 0
theme = ExtResource( 2 )

[node name="Gameplay" type="Label" parent="CanvasLayer/VBoxContainer2"]
margin_right = 585.0
margin_bottom = 65.0
text = "Gameplay"
align = 1

[node name="MaxBones" type="HBoxContainer" parent="CanvasLayer/VBoxContainer2"]
margin_top = 69.0
margin_right = 585.0
margin_bottom = 138.0
hint_tooltip = "Maximum number of rigid bones (lower for more performance)."

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer2/MaxBones"]
margin_top = 2.0
margin_right = 275.0
margin_bottom = 67.0
size_flags_horizontal = 3
text = "Max Bones"

[node name="MaxBones" type="SpinBox" parent="CanvasLayer/VBoxContainer2/MaxBones"]
margin_left = 335.0
margin_right = 585.0
margin_bottom = 69.0
rect_min_size = Vector2( 250, 0 )
size_flags_vertical = 4
max_value = 1024.0
value = 1.0
rounded = true
allow_greater = true

[connection signal="value_changed" from="CanvasLayer/VBoxContainer/MainVolume/Main" to="." method="_on_Main_value_changed"]
[connection signal="value_changed" from="CanvasLayer/VBoxContainer/SoundVolume/Sound" to="." method="_on_Sound_value_changed"]
[connection signal="value_changed" from="CanvasLayer/VBoxContainer/MusicVolume/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="CanvasLayer/VBoxContainer/FontSize/FontSize" to="." method="_on_FontSize_value_changed"]
[connection signal="value_changed" from="CanvasLayer/VBoxContainer2/MaxBones/MaxBones" to="." method="_on_MaxBones_value_changed"]
